--- a/HelpDeskGPT.xcodeproj/xcshareddata/xcschemes/HelpDeskGPT.xcscheme
+++ b/HelpDeskGPT.xcodeproj/xcshareddata/xcschemes/HelpDeskGPT.xcscheme
@@ -53,8 +53,8 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "OPENAI_API_KEY"
-            value = "Insert Your Key Here"
-            isEnabled = "YES">
+            value = ""
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
